mengedit file html.index mengubahnya ke html 5

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>membuat remote dari local</title>
-    </head>
-    <body>
-        <h1> dari local git ke remote</h1>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
 </html>
