membuat form pada index.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Belajar html membuat form</title>
 </head>
 <body>
+    /* elemen pada from (input, textarea, select, button, label) */
+    <form>
+        <label for="username"  >username: </label> //untuk nama inputan
+        <input type="text" id="username">//input memiliki beberapa type yaitu text, password, radio, checkbox, submit, reset, button.
+      
+    </form>
     
 </body>
 </html>
