mengedit index.html

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Belajar html membuat form</title>
 </head>
 <body>
-    /* elemen pada from (input, textarea, select, button, label) */
+    <!--elemen pada from (input, textarea, select, button, label) --> 
     <form>
-        <label for="username"  >username: </label> //untuk nama inputan
-        <input type="text" id="username">//input memiliki beberapa type yaitu text, password, radio, checkbox, submit, reset, button.
+        <label for="username"  >username: </label> <!--untuk nama inputan -->
+        <input type="text" id="username"><!--input memiliki beberapa type yaitu text, password, radio, checkbox, submit, reset, button.-->
       
     </form>
     
