--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
     <form>
         <label for="username"  >username: </label> <!--untuk nama inputan -->
         <input type="text" id="username"><!--input memiliki beberapa type yaitu text, password, radio, checkbox, submit, reset, button.-->
-      
+        <br><br>
+        <label for="password">password:</label>
+        <input type="password" id="password">
+        <br>
+        <input type="radio" id="pria" name="jeniskelamin"> <label for="pria">pria</label>
+        <input type="radio" id="wanita" name="jeniskelamin"> <label for="wanita">wanita</label>
+        <br>
+        <input type="checkbox" id="menyanyi"><label for="menyanyi">menyanyi</label>
+        <input type="checkbox" id="olahraga"><label for="olahraga">olahraga</label>
+        <input type="checkbox" id="ngoding"><label for="ngoding">ngoding</label>
+        <br>
+        <label for="daerahasal">Daerah asal:</label>
+        <select id="daerahasal">
+            <option>Sintang</option>
+            <option>Pontianak</option>
+            <option>Sanggau</option>
+        </select>
+        <br>
+        <button type="submit"> kirim </button>
     </form>
     
 </body>
